feat(ui): improve readability with diagrams, git hints and opaque UI
Improve message clarity and workspace scanning by rendering Mermaid
diagrams, surfacing ignored paths, and removing window translucency.

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@xterm/xterm": "^5.5.0",
     "i18next": "^25.8.0",
     "lucide-react": "^0.562.0",
+    "mermaid": "^11.12.2",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
